--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,34 @@ project(homework_6_7)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(homework_6_7 main.cpp)
+add_executable(homework_6_7 main.cpp
+        ds_utils.h
+        ds_utils.cpp
+        6_1.cpp
+        6_2.cpp
+        6_3.cpp
+        6_4.cpp
+        6_5.cpp
+        6_6.cpp
+        6_7.cpp
+        6_8.cpp
+        6_9.cpp
+        6_10.cpp
+        6_11.cpp
+        6_12.cpp
+        6_13.cpp
+        6_14.cpp
+        6_15.cpp
+        6_16.cpp
+        algo_utils.h
+        algo_utils.cpp
+        7_1.cpp
+        7_2.cpp
+        7_3.cpp
+        7_4.cpp
+        7_5.cpp
+        7_6.cpp
+        7_7.cpp
+        7_8.cpp
+        7_9.cpp
+        7_10.cpp)
